# collection-ai

./: .gitignore  README.md  character.py  game.py  group1_autonomous driving technology proposal.docx  save_manager.py
.github/: pull_request_template.md
2023/work2/: 代码.py
2023/work4/: yolo1.md
2024/Task2/: Untitled-1.ipynb  fzu.py  zhihu_data.csv  教务通知.csv
832303323task2 /: zhihu.csv
Campus_If_Love/: character.py  game.py  main.py  save_manager.py
Nabia_Snack_Incident/: longmen_vs_nabiya.py
Task2/: FZUpandas.ipynb  zhihu.csv  爬取知乎.py
TomoriNaoiy/: baokemeng.py  作业笔记.txt
task1/: solutions.md
task2/: qwq.csv  solutions.md  zhihu.csv  zhihu.py  知乎.py
task3/: BatchNormalization.ipynb  ConvolutionalNetworks.ipynb  Generative_Adversarial_Networks.ipynb  PyTorch.ipynb  Transformer_Captioning.ipynb  features.ipynb  knn.ipynb  softmax.ipynb  solutions.md  svm.ipynb  two_layer_net.ipynb
work1/: README.md
work1文档/: # 大语言模型训练流程.md  # 知识点理解.md
work2/: 注释.txt
work2/DreamOneX/fzu-jxtz-crawler/: pyproject.toml
work2/DreamOneX/fzu-jxtz-crawler/src/fzu_jxtz_crawler/: __init__.py  client.py  crawler.py  export.py  main.py  models.py  parsers.py  text_utils.py  url_utils.py
work2/DreamOneX/fzu-jxtz-crawler/tests/: __init__.py  conftest.py  test_export.py  test_parsers.py  test_text_utils.py  test_url_utils.py
work2/DreamOneX/summer-ospp-crawler/: README.md  projects.json  pyproject.toml
work2/DreamOneX/summer-ospp-crawler/src/summer_ospp_crawler/: crawler.py  main.py  models.py
work3/: README.md  caltech101_code.py
work4/: trainer_v1.py  val.py
(+1419 files in other folders)
