[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "summer-ospp-crawler"
version = "0.1.0"
description = "Summer OSPP Crawler"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "rich>=13.0.0",
]

[project.scripts]
summer-ospp-crawler = "summer_ospp_crawler.main:main"